final prob